parralax html > css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <span class="mouse" id="mouse2"></span>
     <div class="wrapper" id="home">
         <div class="background__container">
-            <img src="./img/bg-progressive2.jpeg" alt="background" class="background" loading="lazy">
+            <div class="background"> </div>
         </div>
     </div>
     <header class="header">
