add mails from form + empty inputs

--- a/index.html
+++ b/index.html
@@ -20,18 +20,7 @@
     </script>
     <script type="text/javascript">
         window.onload = function () {
-            document.getElementById('contact-form').addEventListener('submit', function (event) {
-                event.preventDefault();
-                // generate a five digit number for the contact_number variable
-                this.contact_number.value = Math.random() * 100000 | 0;
-                // these IDs from the previous steps
-                emailjs.sendForm('service_mbshy4c', 'contact_form', this)
-                    .then(function () {
-                        console.log('SUCCESS!');
-                    }, function (error) {
-                        console.log('FAILED...', error);
-                    });
-            });
+            sendForm();
         }
     </script>
 </head>
@@ -481,7 +470,7 @@
                             <div class="form__imgs">
                                 <img src="./img/form-email.svg" alt="image" loading="lazy">
                             </div>
-                            <input type="mail" autocomplete="off" id="Email" placeholder="Email" name="user_email"
+                            <input type="mail" autocomplete="off" id="Email" placeholder="Email" name="user_mail"
                                 required>
                             <div class="form__required">
                                 *
