add style & anim to skills, about

--- a/index.html
+++ b/index.html
@@ -96,7 +96,15 @@
                 <p>De l'humain au technique.</p>
             </div>
             <div class="container__skills">
+
+
                 <div class="container__skills--soft observer-soft">
+                    <div class="cover-soft ">
+                        <h1>SOFT SKILLS</h1>
+                        <div class="covers">
+
+                        </div>
+                    </div>
                     <div class="hover-skills-soft">
                         <p>Curiosité</p><img src="./img/curiosity.svg" alt="image" loading="lazy">
                     </div>
@@ -112,6 +120,10 @@
                 </div>
                 <img src="./img/logo-skills.png" alt="logo-skills" class="observer-img">
                 <div class="container__skills--hard observer-hard">
+                    <div class="cover-hard">
+                        <h1>HARD SKILLS</h1>
+                        <div class="covers"></div>
+                    </div>
                     <div class="hover-skills-hard"><img src="./img/HTML.svg" alt="image" loading="lazy">
                         <p>HTML5</p>
                     </div>
@@ -332,10 +344,12 @@
                         <br>
                         <br>
                         Je vous souhaite la bienvenue sur mon portfolio. Si vous êtes ici,
-                        c'est probablement parce que votre offre, votre entreprise, ou les deux m'intéressent fortement.
+                        c'est probablement parce que votre offre, votre entreprise, ou les deux <strong>m'intéressent
+                            fortement</strong>.
                         <br>
                         <br>
-                        (TLDR plus bas Pour celles et ceux qui ont autre chose à faire que de lire ma biographie.)
+                        (<b> RESUME</b> plus bas Pour celles et ceux qui ont autre chose à faire que de lire ma
+                        biographie.)
                         <br>
                         <br>
                         Après une courte carrière de sous-officier en gendarmerie, je suis actuellement en
@@ -368,20 +382,27 @@
                         peu douté de mon choix.
                         <br>
                         <br>
-                        En parallèle de ma recherche d'alternance je peaufine ma formation en CSS et Javascript avant de
-                        me
-                        lancer dans l'apprentissage d'un frameworks JS, afin d'être compétent pour créer des
+                        Maintenant que <strong>je maitrise HTML5 CSS3 Javascript et le préprocesseur Sass</strong>
+                        je me forme sur la bibliothèque <strong>REACT</strong>, afin d'être compétent pour créer des
                         applications
-                        web ou mobile. Une fois celà effectué je compte explorer un langage Back-End.
+                        web et mobile.
+                        <br>
+                        <br>
+                        Je suis donc à la <strong>recherche d'une
+                            alternance</strong> qui me permettrait de développer mes compétences en
+                        ce sens.
                         <br>
                         <br>
                         N'hésitez pas à me faire un feedback concernant mon code ou bien la façon dont j'envisage ma
                         formation si vous le trouvez nécessaire !
                         <br>
                         <br>
-                        TLDR J'ai mis 27 ans à me connaître, j'adore le développement et je recherche une alternance
-                        pour
-                        développer des applications web ou/et mobile.
+                        <b> RESUME :</b> J'ai mis 27 ans à me connaître, j'adore le développement et <strong>je
+                            recherche
+                            une
+                            alternance
+                            pour
+                            développer des applications web ou/et mobile</strong>.
                     </p>
                 </div>
             </section>
@@ -433,7 +454,7 @@
                         <img src="img/github.svg" alt="image" loading="lazy">
                     </div>
                     <div class="grid__info">
-                        <h4>INSTAGRAM</h4>
+                        <h4>GITHUB</h4>
                         <a href="https://github.com/BenoitDesnos">Mon GitHub</a>
                     </div>
                 </div>
