--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet"
-        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="despcription"
         content="Venez découvrir mon portfolio, Je suis actuellement en recherche d'alternance dans la région de Montpellier, Benoit Desnos.">
     <title>Benoit Desnos's Portfolio</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
-            // https://dashboard.emailjs.com/admin/account
+
             emailjs.init('7rq8AL2AY9SpbZ6pX');
         })();
     </script>
@@ -155,17 +154,16 @@
             <div class="proj-grid proj__anim">
                 <section class="proj-prev">
                     <div class="proj-prev__image">
-                        <a href="http://mes-projets.site/test-reflexe2/">
-                            <img src="./img/Reaction.PNG" alt="image" loading="lazy">
+                        <a href="https://cakethy-design.netlify.app/">
+                            <img src="./img/cakethy.PNG" alt="image" loading="lazy">
                         </a>
                     </div>
                     <div class="proj-prev__text">
                         <h2 class="proj-prev__heading">
-                            Test de reflexes !
+                            En cours de production
                         </h2>
                         <p class="proj-prev__byline">
-                            Il s'agit de mon premier projet personnel, n'hesitez pas à vous rendre dessus et battre mon
-                            score !
+                            Site vitrine de cake design dans le département des pyrénées orientales.
                         </p>
                     </div>
                 </section>
@@ -186,6 +184,23 @@
                 </section>
                 <section class="proj-prev">
                     <div class="proj-prev__image">
+                        <a href="http://mes-projets.site/test-reflexe2/">
+                            <img src="./img/Reaction.PNG" alt="image" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="proj-prev__text">
+                        <h2 class="proj-prev__heading">
+                            Test de reflexes !
+                        </h2>
+                        <p class="proj-prev__byline">
+                            Il s'agit de mon premier projet personnel, n'hesitez pas à vous rendre dessus et battre mon
+                            score !
+                        </p>
+                    </div>
+                </section>
+
+                <section class="proj-prev">
+                    <div class="proj-prev__image">
                         <a href="http://mes-projets.site/Crazy-joe/">
                             <img src="./img/Crazy-joe.PNG" alt="image" loading="lazy">
                         </a>
@@ -199,19 +214,7 @@
                         </p>
                     </div>
                 </section>
-                <section class="proj-prev">
-                    <div class="proj-prev__image">
-                        <img src="./img/placeholder-project.png" alt="image" loading="lazy">
-                    </div>
-                    <div class="proj-prev__text">
-                        <h2 class="proj-prev__heading">
-                            working on it
-                        </h2>
-                        <p class="proj-prev__byline">
-                            Site vitrine pour un garage situé dans le département des pyrénées orientales
-                        </p>
-                    </div>
-                </section>
+
 
 
             </div>
@@ -348,12 +351,13 @@
                             fortement</strong>.
                         <br>
                         <br>
-                        (<b> RESUME</b> plus bas Pour celles et ceux qui ont autre chose à faire que de lire ma
-                        biographie.)
+                        (<b>RESUME</b> en fin de texte)
                         <br>
                         <br>
                         Après une courte carrière de sous-officier en gendarmerie, je suis actuellement en
-                        reconversion professionnelle. Depuis Septembre 2021, j'ai commencé à me former seul sur les
+                        reconversion professionnelle.<span id="readMore"> <b>Lire plus </b><i
+                                class="fa fa-angle-down"></i></span>
+                        <br>Depuis Septembre 2021, j'ai commencé à me former seul sur les
                         langages
                         HTML5, CSS3
                         et JAVASCRIPT
@@ -397,12 +401,14 @@
                         formation si vous le trouvez nécessaire !
                         <br>
                         <br>
-                        <b> RESUME :</b> J'ai mis 27 ans à me connaître, j'adore le développement et <strong>je
+                        <b> RESUME :</b> J'ai mis 27 ans à me connaître et j'adore le développement. Je maitrise HTML5,
+                        CSS, Sass, Javascript et me forme actuellement sur React. <strong>Je
                             recherche
                             une
                             alternance
                             pour
-                            développer des applications web ou/et mobile</strong>.
+                            développer des applications web ou/et mobile</strong><span id="readLess"> <b>Lire moins
+                                <i class="fa fa-angle-up"></i></b></span>
                     </p>
                 </div>
             </section>
