add buttons to projects

--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@
                         <p class="proj-prev__byline">
                             Site vitrine de cake design dans le département des pyrénées orientales.
                         </p>
+
+                    </div>
+                    <div class="proj-prev__buttons">
+                        <a href="https://github.com/BenoitDesnos/cake-thy-design">
+                            <button>
+                                View code </>
+                            </button>
+                        </a>
+                        <a href="https://cakethy-design.netlify.app/">
+                            <button>View project</button></a>
                     </div>
                 </section>
                 <section class="proj-prev">
@@ -180,11 +190,21 @@
                         <p class="proj-prev__byline">
                             Projet personnel permettant de montrer ma capacité à gérer les API.
                         </p>
+
+                    </div>
+                    <div class="proj-prev__buttons">
+                        <a href="https://github.com/BenoitDesnos/Api-pays">
+                            <button>
+                                View code </>
+                            </button>
+                        </a>
+                        <a href="http://mes-projets.site/api-pays/">
+                            <button>View project</button></a>
                     </div>
                 </section>
                 <section class="proj-prev">
                     <div class="proj-prev__image">
-                        <a href="http://mes-projets.site/test-reflexe2/">
+                        <a href="https://test-reflexes.netlify.app/">
                             <img src="./img/Reaction.PNG" alt="image" loading="lazy">
                         </a>
                     </div>
@@ -196,6 +216,16 @@
                             Il s'agit de mon premier projet personnel, n'hesitez pas à vous rendre dessus et battre mon
                             score !
                         </p>
+
+                    </div>
+                    <div class="proj-prev__buttons">
+                        <a href="https://github.com/BenoitDesnos/Test-reflexes">
+                            <button>
+                                View code </>
+                            </button>
+                        </a>
+                        <a href="https://test-reflexes.netlify.app/">
+                            <button>View project</button></a>
                     </div>
                 </section>
 
@@ -212,6 +242,16 @@
                         <p class="proj-prev__byline">
                             Projet personnel en 2D afin d'illustrer ma capacité à gérer la logique Javascript.
                         </p>
+
+                    </div>
+                    <div class="proj-prev__buttons">
+                        <a href="https://github.com/BenoitDesnos/Crazy-Joe">
+                            <button>
+                                View code </>
+                            </button>
+                        </a>
+                        <a href="http://mes-projets.site/Crazy-joe/">
+                            <button>View project</button></a>
                     </div>
                 </section>
 
