ajout react skills

--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
                         <h1>HARD SKILLS</h1>
                         <div class="covers"></div>
                     </div>
-                    <div class="hover-skills-hard"><img src="./img/HTML.svg" alt="image" loading="lazy">
-                        <p>HTML5</p>
-                    </div>
+
                     <div class="hover-skills-hard"><img src="./img/css.svg" alt="image" loading="lazy">
                         <p>CSS3</p>
                     </div>
@@ -134,6 +132,9 @@
                     </div>
                     <div class="hover-skills-hard"><img src="./img/js.svg" alt="image" loading="lazy">
                         <p>Javascript</p>
+                    </div>
+                    <div class="hover-skills-hard"><img src="./img/logo-react.png" alt="image" loading="lazy">
+                        <p>REACT</p>
                     </div>
                 </div>
             </div>
@@ -162,9 +163,11 @@
                         <h2 class="proj-prev__heading">
                             En cours de production
                         </h2>
-                        <p class="proj-prev__byline">
-                            Site vitrine de cake design dans le département des pyrénées orientales.
-                        </p>
+
+                        <div class="proj-prev__byline">
+                            <p>Technologies : <strong>React</strong>, Javascript, Sass</p>
+                            <p>Site vitrine de cake design dans le département des pyrénées orientales.</p>
+                        </div>
 
                     </div>
                     <div class="proj-prev__buttons">
@@ -187,9 +190,11 @@
                         <h2 class="proj-prev__heading">
                             Utilisation d'une API.
                         </h2>
-                        <p class="proj-prev__byline">
-                            Projet personnel permettant de montrer ma capacité à gérer les API.
-                        </p>
+                        <div class="proj-prev__byline">
+                            <p>Technologies : <strong>Javascript</strong>, Api</p>
+                            <p> Projet personnel permettant de montrer ma capacité à gérer les API.</p>
+                        </div>
+
 
                     </div>
                     <div class="proj-prev__buttons">
@@ -212,10 +217,13 @@
                         <h2 class="proj-prev__heading">
                             Test de reflexes !
                         </h2>
-                        <p class="proj-prev__byline">
-                            Il s'agit de mon premier projet personnel, n'hesitez pas à vous rendre dessus et battre mon
-                            score !
-                        </p>
+                        <div class="proj-prev__byline">
+                            <p>Technologies : <strong>Javascript</strong>, Css, Html</p>
+                            <p> Il s'agit de mon premier projet personnel, n'hesitez pas à vous rendre dessus et battre
+                                mon
+                                score !</p>
+                        </div>
+
 
                     </div>
                     <div class="proj-prev__buttons">
@@ -239,9 +247,12 @@
                         <h2 class="proj-prev__heading">
                             Jeux de course 2D.
                         </h2>
-                        <p class="proj-prev__byline">
-                            Projet personnel en 2D afin d'illustrer ma capacité à gérer la logique Javascript.
-                        </p>
+                        <div class="proj-prev__byline">
+                            <p>Technologies : <strong>Javascript</strong></p>
+                            <p> Projet personnel en 2D afin d'illustrer ma capacité à gérer la logique Javascript!
+                                (Seulement sur PC)</p>
+                        </div>
+
 
                     </div>
                     <div class="proj-prev__buttons">
