w3c compliant and popup closing event mouseover

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -171,18 +171,18 @@
 
                     </div>
                     <div class="proj-prev__buttons">
-                        <a href="https://github.com/BenoitDesnos/cake-thy-design">
-                            <button>
-                                View code </>
-                            </button>
+                        <a target="_blank" href="https://github.com/BenoitDesnos/cake-thy-design">
+
+                            View code </>
+
                         </a>
-                        <a href="https://cakethy-design.netlify.app/">
-                            <button>View project</button></a>
+                        <a target="_blank" href="https://cakethy-design.netlify.app/">
+                            View project</a>
                     </div>
                 </section>
                 <section class="proj-prev">
                     <div class="proj-prev__image">
-                        <a href="http://mes-projets.site/api-pays/">
+                        <a target="_blank" href="http://mes-projets.site/api-pays/">
                             <img src="./img/pays.PNG" alt="image" loading="lazy">
                         </a>
                     </div>
@@ -198,18 +198,18 @@
 
                     </div>
                     <div class="proj-prev__buttons">
-                        <a href="https://github.com/BenoitDesnos/Api-pays">
-                            <button>
-                                View code </>
-                            </button>
+                        <a target="_blank" href="https://github.com/BenoitDesnos/Api-pays">
+
+                            View code </>
+
                         </a>
-                        <a href="http://mes-projets.site/api-pays/">
-                            <button>View project</button></a>
+                        <a target="_blank" href="http://mes-projets.site/api-pays/">
+                            View project</a>
                     </div>
                 </section>
                 <section class="proj-prev">
                     <div class="proj-prev__image">
-                        <a href="https://test-reflexes.netlify.app/">
+                        <a target="_blank" href="https://test-reflexes.netlify.app/">
                             <img src="./img/Reaction.PNG" alt="image" loading="lazy">
                         </a>
                     </div>
@@ -227,19 +227,19 @@
 
                     </div>
                     <div class="proj-prev__buttons">
-                        <a href="https://github.com/BenoitDesnos/Test-reflexes">
-                            <button>
-                                View code </>
-                            </button>
+                        <a target="_blank" href="https://github.com/BenoitDesnos/Test-reflexes">
+
+                            View code </>
+
                         </a>
-                        <a href="https://test-reflexes.netlify.app/">
-                            <button>View project</button></a>
+                        <a target="_blank" href="https://test-reflexes.netlify.app/">
+                            View project</a>
                     </div>
                 </section>
 
                 <section class="proj-prev">
                     <div class="proj-prev__image">
-                        <a href="http://mes-projets.site/Crazy-joe/">
+                        <a target="_blank" href="http://mes-projets.site/Crazy-joe/">
                             <img src="./img/Crazy-joe.PNG" alt="image" loading="lazy">
                         </a>
                     </div>
@@ -256,13 +256,13 @@
 
                     </div>
                     <div class="proj-prev__buttons">
-                        <a href="https://github.com/BenoitDesnos/Crazy-Joe">
-                            <button>
-                                View code </>
-                            </button>
+                        <a target="_blank" href="https://github.com/BenoitDesnos/Crazy-Joe">
+
+                            View code </>
+
                         </a>
-                        <a href="http://mes-projets.site/Crazy-joe/">
-                            <button>View project</button></a>
+                        <a target="_blank" href="http://mes-projets.site/Crazy-joe/">
+                            View project</a>
                     </div>
                 </section>
 
@@ -345,10 +345,7 @@
                     <h2>Expériences professionnelles</h2>
                     <div class="cards">
                         <div class="popup">
-                            <div class="cross">
-                                <span></span>
-                                <span></span>
-                            </div>
+
                             <p>Survolez les photos !</p>
                         </div>
                         <div class="card">
@@ -505,14 +502,15 @@
                     </div>
                     <div class="grid__info">
                         <h4>LINKEDIN</h4>
-                        <a href="https://www.linkedin.com/in/benoit-desnos-727ab6158/">Mon profil Linkedin</a>
+                        <a target="_blank" href="https://www.linkedin.com/in/benoit-desnos-727ab6158/">Mon profil
+                            Linkedin</a>
                     </div>
                     <div class="grid__img">
                         <img src="img/github.svg" alt="image" loading="lazy">
                     </div>
                     <div class="grid__info">
                         <h4>GITHUB</h4>
-                        <a href="https://github.com/BenoitDesnos">Mon GitHub</a>
+                        <a target="_blank" href="https://github.com/BenoitDesnos">Mon GitHub</a>
                     </div>
                 </div>
                 <div class="contacts__map">
@@ -596,8 +594,7 @@
                         <li>114 rue guillaume janvier, 34070 Montpellier.</li>
                         <li><a href="tel:0767867799"> (+33)7.67.86.77.99</a></li>
                         <li><a href="mailto:benoit.desnos66@gmail.com">benoit.desnos66@gmail.com</a></li>
-                        <li><a
-                                href="http://mes-projets.site/Benoit-Desnos-V2/">http://mes-projets.site/Benoit-Desnos-V2/</a>
+                        <li><a href="https://benoitdesnos.github.io/">Mon Portfolio</a>
                         </li>
                     </ul>
                 </div>
